# refit

./: AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/workflows/: main.yml  pr.yml
src/: app.rs  args.rs  config.rs  errors.rs  main.rs
src/assets/: sample-config.yml
src/cmds/: diff.rs  mod.rs  run.rs
src/domain/: config.rs  mod.rs  plan.rs
src/ops/: git.rs  process.rs
