[package]
name = "refit"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dhth/refit"
description = "replace local paths with contents from remote git repositories"
homepage = "https://github.com/dhth/refit"
keywords = [
    "cli",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "deny.toml",
    "justfile",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0.23"
tempfile = "3.27.0"
thiserror = "2.0"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
